--- a/Project_Ruben_r0266879.html
+++ b/Project_Ruben_r0266879.html
@@ -1,19 +1,102 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="nl">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="author" content="Ruben Wuyts">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <title>Project</title>
-    </head>
-    <body>
-        <main class="container-fluid">
 
-        </main>
-        <script>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Ruben Wuyts" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Bootstrap cdn-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+    <title>Project</title>
+</head>
 
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    </body>
+<body>
+    <main class="container-fluid">
+        <!--Inleindende tekst-->
+        <row class="row">
+            <div class="col-6" id="headerFormulier">
+                <h1>Registreer</h1>
+            </div>
+        </row>
+        <row class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <p id="introZin">
+                    Meld je aan bij Anaroc Service, wij beschermen jouw tegen malware!
+                </p>
+            </div>
+        </row>
+        <!--Start formulier-->
+        <form>
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!--Voornaam-->
+                    <div class="mb-3">
+                        <label for="inputVoornaam" class="form-label">Voornaam</label>
+                        <input type="text" class="form-control" id="inputVoornaam" placeholder="Uw voornaam" />
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!--Familienaam-->
+                    <div class="mb-3">
+                        <label for="inputFamilienaam" class="form-label">Naam</label>
+                        <input type="text" class="form-control" id="inputFamilienaam" placeholder="Uw naam" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!--Gebruikersnaam-->
+                    <label for="inputGebruikersnaamGroup">Gebruikersnaam</label>
+                    <div class="input-group mb-3" id="inputGebruikersnaamGroup">
+                        <span class="input-group-text">@</span>
+                        <input type="text" class="form-control" id="inputGebruikersnaam" placeholder="u911236" />
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!--Email-->
+                    <div class="mb-3">
+                        <label for="inputEmail">E-mailadres</label>
+                        <input type="email" class="form-control" id="inputEmail" placeholder="mail@example.be" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!--Wachtwoord-->
+                    <div class="mb-3">
+                        <label for="inputWachtwoord" class="form-label">Wachtwoord</label>
+                        <input type="password" class="form-control" id="inputWachtwoord"
+                            aria-describedby="wachtwoordHelp" />
+                        <div id="wachtwoordHelp" class="form-text">
+                            Je wachtwoord moet minstens 8 tekens lang zijn
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!--Herhaling Wachtwoord-->
+                    <div class="mb-3">
+                        <label for="inputHerhalingWachtwoord" class="form-label">Herhaal wachtwoord</label>
+                        <input type="text" class="form-control" id="inputHerhalingWachtwoord" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <!--Adres-->
+                    <div class="mb-3">
+                        <label for="inputAdres" class="form-label">Adres</label>
+                        <input type="text" class="form-control" id="inputAdres" placeholder="Uw adres en huisnummer" />
+                    </div>
+                </div>
+            </div>
+        </form>
+    </main>
+    <script></script>
+    <!--Bootstrap script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
