Landen en provincies toegevoegd

--- a/Project_Ruben_r0266879.html
+++ b/Project_Ruben_r0266879.html
@@ -90,6 +90,55 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!--Land-->
+                    <select class="form-select" aria-label="land keuze" id="landKeuze">
+                        <option selected>Kies een land</option>
+                        <option value="1">België</option>
+                        <option value="2">Duitsland</option>
+                        <option value="3">Nederland</option>
+                        <option value="4">Frankrijk</option>
+                        <option value="5">Verenigd Koningkrijk</option>
+                      </select>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!--Provincie-->
+                    <select class="form-select" aria-label="provincie keuze" id="provincieKeuze">
+                        <option selected>Kies een provincie</option>
+                        <!--Belgische provincies-->
+                        <option value="1">Antwerpen (BE)</option>
+                        <option value="2">Limburg (BE)</option>
+                        <option value="3">West-Vlaanderen (BE)</option>
+                        <option value="4">Henegouwen (BE)</option>
+                        <option value="5">Luik (BE)</option>
+                        <!--Duitse provincies-->
+                        <option value="1">Beieren (DE)</option>
+                        <option value="2">Brandenburg (DE)</option>
+                        <option value="3">Berlijn (DE)</option>
+                        <option value="4">Nedersaksen (DE)</option>
+                        <option value="5">Hessen (DE)</option>
+                        <!--Nederlands provincies-->
+                        <option value="1">Flevoland (NL)</option>
+                        <option value="2">Friesland (NL)</option>
+                        <option value="3">Groningen (NL)</option>
+                        <option value="4">Drenthe (NL)</option>
+                        <option value="5">Gelderland (NL)</option>
+                        <!--Franse provincies-->
+                        <option value="1">Bretagne (FR)</option>
+                        <option value="2">Normandie (FR)</option>
+                        <option value="3">Provence (FR)</option>
+                        <option value="4">Ile-de-France (FR)</option>
+                        <option value="5">Occitanie (FR)</option>
+                        <!--Verenigd Koningkrijk "provincies"-->
+                        <option value="1">Scotland (UK)</option>
+                        <option value="2">Wales (UK)</option>
+                        <option value="3">West Midlands (UK)</option>
+                        <option value="4">Anglia (UK)</option>
+                        <option value="5">North East (UK)</option>
+                      </select>
+                </div>
+            </div>
         </form>
     </main>
     <script></script>
